# ml-models

./: README.md
.github/workflows/: build.yml  ci.yml  labeler.yml  release-drafter.yml
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt  start.sh  traefik.prod.toml
backend/scripts/: main.py  network.sh  start.sh
backend/src/ml_models/: __init__.py  app.py  bootstrap.py  config.py  context.py  dependencies.py  logging.py
backend/src/ml_models/clients/: mnist_client.py
backend/src/ml_models/models/: mnist_model.py
backend/src/ml_models/routers/: health_router.py  mnist_router.py
backend/src/ml_models/services/: mnist_service.py
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  index.tsx
frontend/src/components/: index.tsx
frontend/src/components/Button/: Button.tsx
frontend/src/components/ButtonGroup/: ButtonGroup.tsx
frontend/src/components/Canvas/: Canvas.tsx
frontend/src/components/Container/: Container.tsx
frontend/src/components/GlobalStyle/: GlobalStyle.tsx
frontend/src/components/Prediction/: Prediction.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/Mnist/: Mnist.tsx
frontend/src/types/: interfaces.ts
frontend/src/utils/: useRestClient.ts
