[tool.poetry]
name = "ml_models"
version = "0.1.0"
description = "ML Models"
authors = ["Luke Miloszewski <lukemiloszewski@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lukemiloszewski/ml-models"
repository = "https://github.com/lukemiloszewski/ml-models"
packages = [
    { include = "ml_models", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.75.0"
numpy = "^1.22.2"
onnxruntime = "^1.10.0"
pydantic = "^1.9.0"
opencv-python-headless = "^4.5.5"
uvicorn = {version = "^0.17.5", optional = true}
gunicorn = {version = "^20.1.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.0.0"
flake8 = "^4.0.0"
isort = "^5.10.0"
pre-commit = "^2.17.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
all = ["uvicorn", "gunicorn"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 95

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
